--- a/PBSadmbwin/DESCRIPTION
+++ b/PBSadmbwin/DESCRIPTION
@@ -7,3 +7,4 @@ Maintainer: Jon T. Schnute <Jon.Schnute@dfo-mpo.gc.ca>
 Depends: R (>= 2.7.0), PBSmodelling (>= 2.06)
 Description: R Support for ADMB (AD Model Builder)
 License: GPL (>=2)
+Packaged: 0000-00-00 16:55:01 UTC; this_line_replaced_by_packing_or_building_binary
