--- a/PBSadmb/DESCRIPTION
+++ b/PBSadmb/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: PBSadmbwin
+Package: PBSadmb
 Version: 0.50
 Date: 2009-08-14
-Title: PBS ADMB for Windows
+Title: PBS ADMB
 Author: Jon T. Schnute, Rowan Haigh, Anisa Egeli
 Maintainer: Jon T. Schnute <Jon.Schnute@dfo-mpo.gc.ca>
 Depends: R (>= 2.7.0), PBSmodelling (>= 2.06)
