--- a/PBSadmb/DESCRIPTION
+++ b/PBSadmb/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: PBSadmb
-Version: 0.50
-Date: 2009-08-14
+Version: 0.51
+Date: 2009-11-20
 Title: PBS ADMB
 Author: Jon T. Schnute, Rowan Haigh, Anisa Egeli
 Maintainer: Jon T. Schnute <Jon.Schnute@dfo-mpo.gc.ca>
 Depends: R (>= 2.7.0), PBSmodelling (>= 2.06)
-Description: R Support for ADMB (AD Model Builder)
+Description: R Support for ADMB (Automatic Differentiation Model Builder)
 License: GPL (>=2)
 Packaged: 0000-00-00 16:55:01 UTC; this_line_replaced_by_packing_or_building_binary
 
