--- a/PBSadmb/DESCRIPTION
+++ b/PBSadmb/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: PBSadmb
-Version: 0.51
+Version: 0.60
 Date: 2009-11-20
 Title: PBS ADMB
-Author: Jon T. Schnute, Rowan Haigh, Anisa Egeli
+Author: Jon T. Schnute, Rowan Haigh
 Maintainer: Jon T. Schnute <Jon.Schnute@dfo-mpo.gc.ca>
-Depends: R (>= 2.7.0), PBSmodelling (>= 2.06)
+Depends: R (>= 2.7.0), PBSmodelling (>= 2.50)
 Description: R Support for ADMB (Automatic Differentiation Model Builder)
 License: GPL (>=2)
 Packaged: 0000-00-00 16:55:01 UTC; this_line_replaced_by_packing_or_building_binary
