--- a/PBSadmb/NAMESPACE
+++ b/PBSadmb/NAMESPACE
@@ -2,7 +2,7 @@
 # exportPattern(".")
 
 exportPattern("^[^\\.]")
-exportPattern("[^\\.win\\.]")
+exportPattern("^\\.win\\.")
 export(.initOptions)
 
 # Import all packages listed as Imports or Depends
