Exported the '.clean' functions from the namespace.

--- a/PBSadmb/NAMESPACE
+++ b/PBSadmb/NAMESPACE
@@ -3,6 +3,7 @@
 
 exportPattern("^[^\\.]")
 exportPattern("^\\.win\\.")
+exportPattern("^\\.clean")
 export(.initOptions)
 
 # Import all packages listed as Imports or Depends
