--- a/PBSadmb/DESCRIPTION
+++ b/PBSadmb/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: PBSadmb
 Version: 0.64
-Date: 2012-06-05
+Date: 2012-10-31
 Title: ADMB for R Using Scripts or GUI
 Author: Jon T. Schnute, Rowan Haigh, Alex Couture-Beil
-Maintainer: Jon T. Schnute <Jon.Schnute@dfo-mpo.gc.ca>
-Depends: R (>= 2.10.0), methods, tcltk, PBSmodelling (>= 2.60)
+Maintainer: Jon T. Schnute <schnutej-dfo@shaw.ca>
+Depends: R (>= 2.15.0), methods, tcltk, PBSmodelling (>= 2.60)
 Description: R Support for ADMB (Automatic Differentiation Model Builder)
 License: GPL (>=2)
 
