--- a/PBSadmb/NAMESPACE
+++ b/PBSadmb/NAMESPACE
@@ -2,9 +2,22 @@
 # exportPattern(".")
 
 exportPattern("^[^\\.]")
-exportPattern("^\\.win\\.")
+exportPattern("^\\.add")
+exportPattern("^\\.append")
+exportPattern("^\\.call")
+exportPattern("^\\.change")
+exportPattern("^\\.choose")
 exportPattern("^\\.clean")
-export(.initOptions)
+exportPattern("^\\.delete")
+exportPattern("^\\.do")
+exportPattern("^\\.find")
+exportPattern("^\\.get")
+exportPattern("^\\.init")
+exportPattern("^\\.install")
+exportPattern("^\\.load")
+exportPattern("^\\.set")
+exportPattern("^\\.win\\.")
+export(.asIs)
 
 # Import all packages listed as Imports or Depends
 import( PBSmodelling )
