Created temporary working directory `.PBSadmbEnv` to house the control object `PBSadmb` and the options object`.PBSadmb`.

--- a/PBSadmb/NAMESPACE
+++ b/PBSadmb/NAMESPACE
@@ -15,6 +15,7 @@ exportPattern("^\\.get")
 exportPattern("^\\.init")
 exportPattern("^\\.install")
 exportPattern("^\\.load")
+exportPattern("^\\.PBS")
 exportPattern("^\\.set")
 exportPattern("^\\.win\\.")
 export(.asIs)
