--- a/PBSadmb/DESCRIPTION
+++ b/PBSadmb/DESCRIPTION
@@ -1,10 +1,11 @@
 Package:     PBSadmb
-Version:     0.66
-Date:        2013-05-14
+Version:     0.67
+Date:        2013-12-17
 Title:       ADMB for R Using Scripts or GUI
 Author:      Jon T. Schnute, Rowan Haigh, Alex Couture-Beil
 Maintainer:  Jon T. Schnute <schnutej-dfo@shaw.ca>
-Depends: R   (>= 2.15.0), methods, tcltk, PBSmodelling (>= 2.65)
+Depends: R   (>= 2.15.0) ,methods, tcltk
+Imports:     PBSmodelling (>= 2.65)
 Description: R Support for ADMB (Automatic Differentiation Model Builder)
 License:     GPL (>=2)
 URL:         http://code.google.com/p/pbs-admb/
