--- a/PBSadmb/NAMESPACE
+++ b/PBSadmb/NAMESPACE
@@ -20,8 +20,8 @@ exportPattern("^\\.set")
 exportPattern("^\\.win\\.")
 export(.asIs)
 
-# Import all packages listed as Imports or Depends
-import( PBSmodelling )
+# Packages declared in the 'Depends' field should not also be in the 'Imports' field (from R-exts.pdf).
+# import( PBSmodelling )
 
 # Import the S4 options manager from PBSmodelling
 #importClassesFrom(PBSmodelling, PBSoptions)
