(1) Added new function `setupAD` to initialize and validate the paths to admbpath, gccpath, and editor for command line functions. (2) Modified GUI to take the new pathfile; created function `.win.readADpaths`.

--- a/PBSadmb/NAMESPACE
+++ b/PBSadmb/NAMESPACE
@@ -10,15 +10,15 @@ exportPattern("^\\.choose")
 exportPattern("^\\.clean")
 exportPattern("^\\.delete")
 exportPattern("^\\.do")
-exportPattern("^\\.find")
 exportPattern("^\\.get")
 exportPattern("^\\.init")
-exportPattern("^\\.install")
 exportPattern("^\\.load")
+exportPattern("^\\.norm")
 exportPattern("^\\.PBS")
 exportPattern("^\\.set")
 exportPattern("^\\.win\\.")
 export(.asIs)
+export(.version)
 
 # Packages declared in the 'Depends' field should not also be in the 'Imports' field (from R-exts.pdf).
 # import( PBSmodelling )
