--- a/PBSadmb/DESCRIPTION
+++ b/PBSadmb/DESCRIPTION
@@ -1,10 +1,13 @@
 Package:     PBSadmb
 Version:     0.68
-Date:        2014-02-27
+Date:        2014-03-27
 Title:       ADMB for R Using Scripts or GUI
-Author:      Jon T. Schnute, Rowan Haigh, Alex Couture-Beil
-Maintainer:  Jon T. Schnute <schnutej-dfo@shaw.ca>
-Depends:     R (>= 2.15.0), methods, tcltk, PBSmodelling (>= 2.65)
+Author:      Jon T. Schnute <schnutej-dfo@shaw.ca>,
+             Rowan Haigh <rowan.haigh@dfo-mpo.gc.ca>,
+             Alex Couture-Beil <alex@mofo.ca>
+Maintainer:  Rowan Haigh <rowan.haigh@dfo-mpo.gc.ca>
+Depends:     R (>= 2.15.0), PBSmodelling (>= 2.65)
+Imports:     methods
 Description: R Support for ADMB (Automatic Differentiation Model Builder)
 License:     GPL (>=2)
 URL:         http://code.google.com/p/pbs-admb/
