--- a/PBSadmb/NAMESPACE
+++ b/PBSadmb/NAMESPACE
@@ -21,9 +21,12 @@ export(.asIs)
 export(.version)
 
 # Packages declared in the 'Depends' field should not also be in the 'Imports' field (from R-exts.pdf).
-# import( PBSmodelling )
+# For PBSadmb I have to IMPORT and DEPEND on PBSmodelling.
+#   IMPORT alone cannot find `ComboBox` when `admb()` is called.
+#   DEPEND alone causes NOTE in Rcheck.
+import( methods, PBSmodelling )
 
-# Import the S4 options manager from PBSmodelling
+# Import the S4 options manager from PBSmodelling (doesn't work)
 #importClassesFrom(PBSmodelling, PBSoptions)
 #importMethodsFrom(PBSmodelling, initialize, print, show)
 
